crates/cuda-core/tests/launch_contract/fail_private_mutation.stderr
error[E0616]: field `block_x` of struct `LaunchConfig1D` is private
 --> tests/launch_contract/fail_private_mutation.rs:5:11
  |
5 |     valid.block_x = 64;
  |           ^^^^^^^ private field
