crates/cuda-core/tests/launch_contract/fail_private_mutation.rs
use cuda_core::LaunchConfig1D;

fn main() {
    let mut valid = LaunchConfig1D::new(1, 32, 0);
    valid.block_x = 64;
}
